commit 	modified:   bikes_final.xlsx 	modified:   london_bikes.ipynb

--- a/london_bikes.ipynb
+++ b/london_bikes.ipynb
@@ -1267,7 +1267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### "
+    "### If the weather is clear, broken clouds, or scattered clouds, then the average number of bikes being used is over 1000. However, the least amount of bikes being used on average is when there is snowfall, averaging out to ~250."
    ]
   }
  ],
